# jsonl_index

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
example/: animals.jsonl
src/jsonl_index/: __init__.py  jsonl_index.py
src/jsonl_index/scripts/: args.py  build.py  get.py  loop.py
test/: test_animals.py
